parser/tests/snapshots/litteral_string__tests__different_quotes.snap
---
source: parser/tests/litteral_string.rs
expression: "(tokens, parsed)"
---
(
    [
        SingleQuote,
        DoubleQuote,
        SingleQuote,
        Litteral(
            "diferent",
        ),
        Space,
        Litteral(
            "quotes",
        ),
        SingleQuote,
        DoubleQuote,
        SingleQuote,
        EOF,
    ],
    Ok(
        String(
            "diferent quotes",
        ),
    ),
)
