parser/tests/snapshots/litteral_string__tests__unmatched_quotes.snap
---
source: parser/tests/litteral_string.rs
expression: "(tokens, parsed)"
---
(
    [
        SingleQuote,
        DoubleQuote,
        SingleQuote,
        Litteral(
            "unmatched",
        ),
        Space,
        Litteral(
            "quotes",
        ),
        DoubleQuote,
        EOF,
    ],
    Ok(
        String(
            "unmatched quotes",
        ),
    ),
)
